--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,13 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation versions.appcompat
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation project(path: ':lib-web')
+    /*基础库*/
+    implementation 'com.github.wenkency:base:3.5.0'// 基础库
+    implementation "org.greenrobot:eventbus:3.2.0"// eventbus
+    implementation 'com.github.wenkency:loading:1.3.0'// 加载页面
+    implementation 'com.github.wenkency:titlebar:1.8.0'// 标题栏
+    /*基础库*/
 }
